# toll

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  justfile  prices.json
.github/workflows/: ci.yml
src/: cli.rs  config.rs  json_usage.rs  main.rs  paths.rs  pricing.rs  providers.rs  proxy.rs  record.rs  sse.rs  stats.rs  tail.rs
src/parsers/: anthropic.rs  gemini.rs  mod.rs  openai_like.rs
